Some changes somehow related with typechecking and the "special folders" configuration, which is still not implemented properly at the moment, but was preventing things from working in the remote server.